--- a/desafio/desafio 012/estilo/style.css
+++ b/desafio/desafio 012/estilo/style.css
@@ -1,13 +1,23 @@
 @charset "UTF-8"; 
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+--fonte01: Verdana, Geneva, Tahoma, sans-serif;
+--fonte02: 'Passion One', cursive;
+--fonte03: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte01);
 }
 
 header {
@@ -19,6 +29,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte02);
+    font-size: 10vw;
 }
 
 header > p {
@@ -40,6 +52,8 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte03);
+    font-size: 3.5vw;
 }
 
 .normal {
@@ -53,7 +67,8 @@ section {
 }
 
 .imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
